# statscraper

./: statscraper.cabal
src/: StatScraper.hs
src/Reactive/Banana/: HostName.hs  PollFile.hs  Process.hs  Timer.hs
src/Reactive/Banana/Stats/: IOStat.hs  IfStat.hs  StatsD.hs  Uptime.hs
src/Reactive/Banana/Stats/IOStat/: Linux.hs  MacOS.hs
