name:                   statscraper
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/statscraper

category:               Unclassified
synopsis:               Simple system monitor
description:            Simple system monitor

Executable statscraper
  hs-source-dirs:       src
  main-is:              StatScraper.hs
  build-depends:        base >= 3 && < 5,
                        hstatsd,
                        parsec == 3.*,
                        process,
                        reactive-banana,
                        time
